feat: move from JWT to custom session tokens
