# docs/swagger.json
@@ -34,11 +34,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.Session"
-                        }
+                    "204": {
+                        "description": "No Content"
                     },
                     "400": {
                         "description": "Invalid request",
@@ -65,7 +62,7 @@
             "delete": {
                 "security": [
                     {
-                        "Bearer": []
+                        "SessionID": []
                     }
                 ],
                 "description": "Invalidate the user's session",
@@ -81,12 +78,6 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
-                    },
-                    "401": {
-                        "description": "Invalid credentials",
-                        "schema": {
-                            "$ref": "#/definitions/utils.APIError"
-                        }
                     }
                 }
             }
@@ -95,7 +86,7 @@
             "get": {
                 "security": [
                     {
-                        "Bearer": []
+                        "SessionID": []
                     }
                 ],
                 "description": "Get the authenticated user",
@@ -132,7 +123,7 @@
             "put": {
                 "security": [
                     {
-                        "Bearer": []
+                        "SessionID": []
                     }
                 ],
                 "description": "Update the authenticated user",
@@ -186,7 +177,7 @@
             "delete": {
                 "security": [
                     {
-                        "Bearer": []
+                        "SessionID": []
                     }
                 ],
                 "description": "Delete the authenticated user",
@@ -222,7 +213,7 @@
             "put": {
                 "security": [
                     {
-                        "Bearer": []
+                        "SessionID": []
                     }
                 ],
                 "description": "Changes the authenticated user's password",
@@ -296,10 +287,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.Session"
-                        }
+                        "description": "Created"
                     },
                     "400": {
                         "description": "Invalid request",
@@ -320,7 +308,7 @@
             "get": {
                 "security": [
                     {
-                        "Bearer": []
+                        "SessionID": []
                     }
                 ],
                 "description": "Get all existing users",
@@ -362,7 +350,7 @@
             "get": {
                 "security": [
                     {
-                        "Bearer": []
+                        "SessionID": []
                     }
                 ],
                 "description": "Get user by given ID",
@@ -414,7 +402,7 @@
             "put": {
                 "security": [
                     {
-                        "Bearer": []
+                        "SessionID": []
                     }
                 ],
                 "description": "Update user by given ID",
@@ -475,7 +463,7 @@
             "delete": {
                 "security": [
                     {
-                        "Bearer": []
+                        "SessionID": []
                     }
                 ],
                 "description": "Delete user by given ID",
@@ -568,6 +556,76 @@
                     }
                 }
             }
+        },
+        "/forgotten-password": {
+            "post": {
+                "description": "Create a forgotten password token for a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User's email address",
+                        "name": "email",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIError"
+                        }
+                    }
+                }
+            }
+        },
+        "/reset-password": {
+            "post": {
+                "description": "Create a forgotten password token for a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "parameters": [
+                    {
+                        "description": "Reset password data",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ResetPasswordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIError"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -630,9 +688,22 @@
                 }
             }
         },
-        "controllers.Session": {
+        "controllers.ResetPasswordRequest": {
             "type": "object",
+            "required": [
+                "id",
+                "password",
+                "token"
+            ],
             "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 32,
+                    "minLength": 8
+                },
                 "token": {
                     "type": "string"
                 }
@@ -694,11 +765,11 @@
         }
     },
     "securityDefinitions": {
-        "Bearer": {
-            "description": "Type \"Bearer\" followed by a space and JWT token",
+        "SessionID": {
+            "description": "This is the session ID",
             "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
+            "name": "sessionID",
+            "in": "cookie"
         }
     }
 }
